--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,4 +17,4 @@ jobs:
       - name: go vet
         run: go vet ./...
       - name: go test
-        run: go test -parallel 10 -v ./...
+        run: go test
